kubernetes/monitoring/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
            pathType: Prefix
            path: /
    - host: grafana.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            pathType: Prefix
            path: /
